Sat Dec 16 21:35:31 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * checkout.c (checkout): use send_to_server() now.

Sat Dec 16 21:18:16 1995  H.J. Lu (hjl@gnu.ai.mit.edu)
                          (applied by kfogel@cyclic.com)
        
	* import.c (import_descend): We ignore an entry if it is
		1. not a file, nor a link, nor a directory, or
		2. a file and on the ignore list.

	* update.c (ignore_files): We ignore any thing which is
		1. not a file, or
		2. it is a file on the ignore list.

Sat Dec 16 00:14:19 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * client.c (send_to_server): corrected comment.

        * client.h: prototype new func send_to_server().

        * add.c, admin.c, client.c, commit.c, diff.c, edit.c, history.c,
        import.c, log.c, patch.c, release.c, remove.c, rtag.c, status.c,
        tag.c, update.c, watch.c: 
        Use send_to_server() instead of writing directly to to_server.

        * client.c: conditionally include the right stuff for variable arg
        lists.
        (send_to_server): new func.
        
Fri Dec 15 23:10:22 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * error.c: expanded comments.

        * client.c (connect_to_pserver): verbosify errors.
        (connect_to_pserver): use send() and recv(), not write() and
        read().  Sockets are not file descriptors on all systems.

Fri Dec 15 22:36:05 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * client.c (connect_to_pserver): oops, removed old debugging
        printf.

Fri Dec 15 18:21:16 1995  Karl Fogel  (kfogel@floss.cyclic.com)

        * client.c (auth_server_port_number): don't call htons();
        init_sockaddr() does that for us.
        (init_sockaddr): zero the sockadder_in struct before doing
        anything with it.  IBM TCP/IP docs recommend this, and it can't
        hurt.

Fri Dec 15 15:21:53 1995  Karl Fogel  <kfogel@floss.cyclic.com>

        * client.c (connect_to_pserver): new var `port_number', initialize